test/SemanticAnalysis/Module/ImportedFunction.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

import a.b.c 1.2.3 {
	void decl();
	
	// CHECK: .loci:8:2: error: cannot define imported function 'def'
	void def() { }
}

import void importedDecl();

// CHECK: .loci:14:1: error: cannot define imported function 'importedDef'
import void importedDef() { }

// CHECK: 2 errors generated.
